Fixed scrollbars, improves sticker selection widget

--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -9,83 +9,96 @@
   border: 4px dashed rgba(255, 255, 255, 0.05);
 }
 
-.scroller {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
-  max-height: calc(100% - 40px);
-  overflow-y: scroll;
+.scroller__wrapper {
+  flex: 1;
+  position: relative;
 
-  .picture__wrapper {
-    display: flex;
-    flex-direction: column;
+  .scroller {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    max-height: 100%;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    overflow-y: scroll;
+    align-items: flex-start;
   
-    .picture {
+    .picture__wrapper {
       display: flex;
-      position: relative;
+      flex-direction: column;
     
-      img {
-        width: 100%;
-        border-radius: 5px;
-      }
-
-      .controls {
-        bottom: 0;
-        bottom: 0;
-        opacity: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-        transition: opacity 0.3s ease;
-        z-index: 1;
+      .picture {
+        display: flex;
+        position: relative;
       
-        button {
+        img {
+          width: 100%;
+          border-radius: 5px;
+        }
+  
+        .controls {
+          bottom: 0;
+          bottom: 0;
+          opacity: 0;
           position: absolute;
-          background-position: center;
-          background-size: 16px;
-          background-repeat: no-repeat;
-          background-color: #111;
-          border: unset;
-          cursor: pointer;
-          transition: all 0.3s ease;
-          width: 24px;
-          height: 24px;
-          border-radius: 3px;
-      
-          &:hover {
-            transform: scale(1.15);
-          }
-
-          &.download {
-            background-image: url('../../assets/icons/download.svg');
-            bottom: 3px;
-            right: 3px;
-          }
-          
-          &.share {
-            background-image: url('../../assets/icons/share.svg');
-            bottom: 3px;
-            right: 32px;
-          }
-          
-          &.delete {
-            background-image: url('../../assets/icons/cross.svg');
-            top: 3px;
-            right: 3px;
+          right: 0;
+          top: 0;
+          transition: opacity 0.3s ease;
+          z-index: 1;
+        
+          button {
+            position: absolute;
+            background-position: center;
+            background-size: 16px;
+            background-repeat: no-repeat;
+            background-color: #111;
+            border: unset;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 24px;
+            height: 24px;
+            border-radius: 3px;
+        
+            &:hover {
+              transform: scale(1.15);
+            }
+  
+            &.download {
+              background-image: url('../../assets/icons/download.svg');
+              bottom: 3px;
+              right: 3px;
+            }
+            
+            &.share {
+              background-image: url('../../assets/icons/share.svg');
+              bottom: 3px;
+              right: 32px;
+            }
+            
+            &.delete {
+              background-image: url('../../assets/icons/cross.svg');
+              top: 3px;
+              right: 3px;
+            }
           }
         }
+        
+        &:hover .controls {
+          opacity: 1;
+        }
       }
-      
-      &:hover .controls {
-        opacity: 1;
+  
+      h3 {
+        color: #fff;
+        font-size: 13px;
+        font-weight: 500;
+        letter-spacing: 0.4px;
+        margin-top: 10px;
+        text-align: center;
       }
-    }
-
-    h3 {
-      color: #fff;
-      font-size: 13px;
-      margin-top: 10px;
-      text-align: center;
-    }
+    }  
   }  
 }
+
