--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -4,7 +4,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 210px);
   justify-content: flex-start;
   padding: 20px;
 
@@ -16,5 +16,8 @@
 
   .sidebar__content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
